quayacm-deployment/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: budget-app
    name: budget-app
  name: budget-app
  namespace: budget-app
spec:
  host: budget.apps.ocp4-mng.example.com
  path: "/"
  to:
    kind: Service
    name: budget-app
  wildcardPolicy: None
